projects/compiler/test/parser/import_error_alias_no_module.out
Error at %FILE_NAME%:1:8
Unexpected token 'as', expected one of 'string', 'identifier':
  |  import as abc
            ^